Revert "Update company overview link text in service.html"

--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
     <nav>
       <div id="close-button" class="close-button">x</div>
       <ul>
-        <li><a href="about.html">会社テスト概要</a></li>
+        <li><a href="about.html">会社概要</a></li>
         <li><a href="service_dhw_dash.html">サービス</a></li>
         <li><a href="news.html">ニュースリリース</a></li>
         <li><a href="inquiry.html">お問い合わせ</a></li>
